--- a/assignments/index.html
+++ b/assignments/index.html
@@ -10,7 +10,7 @@
   <script src="this.js"></script>
   <script src="prototypes.js"></script>
 </head>
-small change - initial commit
+this one
 <body>
 <h1>JS III - Check your work in the console!</h1>
 </body>
